# agentic-ai-personal-health-coach

./: README.md  package-lock.json
fastApi-agent-service/: README.md  code.py  example.env  local.env  pyproject.toml  requirements.txt  test_gemini.py
fastApi-agent-service/backend/: app.py  server.py
fastApi-agent-service/backend/config/: lifespan.py  main.py
fastApi-agent-service/backend/constants/: enums.py
fastApi-agent-service/backend/controller/: agent.py  internal.py  user.py
fastApi-agent-service/backend/controller/agents/: health_analyzer.py  meal_plan_generator.py  workout_plan_generator.py
fastApi-agent-service/backend/middleware/: verify_signature.py
fastApi-agent-service/backend/models/: HealthPlan.py
fastApi-agent-service/backend/private/: auth_public_key.pem
fastApi-agent-service/backend/routes/: index.py  internal.py  user.py
fastApi-agent-service/backend/security/: jsonwebtoken.py
fastApi-agent-service/backend/services/: user.py
fastApi-agent-service/backend/utils/: __init__.py  embeddings.py  file_reader.py  generate_random_string.py  health_safety.py  llm.py  pydanticToFormError.py  timedelta.py
fastApi-agent-service/backend/validations/: internal.py  user.py
frontend/: .env  .env.example  README.md  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.tsx  TestComponent.jsx  index.css  main.tsx
nodeJs-user-service/: README.md  example.env  executable.js  package.json  server.js
nodeJs-user-service/config/: index.js
nodeJs-user-service/constant/: regex.js  values.js
nodeJs-user-service/constants/: enum.js  regex.js  values.js
nodeJs-user-service/controllers/: auth.js  internal.js  user.js  wellness.js
nodeJs-user-service/database/: connection.js
(+87 files in other folders)
