name = "wellness-agent-service"
version = "1.0.0"
description = "AI-Powered Personal Health & Wellness Coach Agent Service"
authors = [
    { name = "Wellness AI Team", email = "health-safety@wellness-ai.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11.0,<4.0"
dependencies = [
    "fastapi>=0.115.13,<0.116.0",
    "uvicorn>=0.34.3,<0.35.0", 
    "python-decouple>=3.8,<4.0",
    "beanie>=1.30.0,<2.0.0",
    "python-jose>=3.5.0,<4.0.0",
    "bcrypt>=4.3.0,<5.0.0",
    "cryptography>=45.0.4,<46.0.0",
    "python-multipart>=0.0.20,<0.0.21",
    "numpy>=2.3.0,<3.0.0",
    "langchain-google-genai>=2.1.5,<3.0.0",
    "langgraph>=0.4.8,<0.5.0",
    "chardet>=5.2.0,<6.0.0",
    "pillow>=11.2.1,<12.0.0",
    "pymupdf>=1.26.1,<2.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "requests>=2.32.4,<3.0.0",
    "motor>=3.7.1,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.poetry.scripts]
server = "backend.server:start_server"
dev-server = "backend.server:start_development_server"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
    \.venv
  | \.git
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | build
  | dist
  | private
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
